Everything with fbangel changed to fb4cash

--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -77,13 +77,13 @@
       "testimonies": [
         {
           "number": "1",
-          "testimony": "I have collaborated with fbangel for more than a year, I have not had any problems. The money is always on time and I always receive answers to all my questions. It's great that I don't have to do anything, and besides, it doesn't affect my profile at all. Let's say I just make money by renting my Facebook account. I recommend it to everybody!",
+          "testimony": "I have collaborated with fb4cash for more than a year, I have not had any problems. The money is always on time and I always receive answers to all my questions. It's great that I don't have to do anything, and besides, it doesn't affect my profile at all. Let's say I just make money by renting my Facebook account. I recommend it to everybody!",
           "author": "Ana Martin",
           "membership": "Member since May 2021"
         },
         {
           "number": "2",
-          "testimony": "I decided to try to make money with FbAngel, since I was interested to know how it works. I can say that it is a great way to have additional income. I simply had to fill out the form AND NOTHING ELSE! The guys take care of the rest, I just collect my money in my PayPal account.",
+          "testimony": "I decided to try to make money with FB4cash, since I was interested to know how it works. I can say that it is a great way to have additional income. I simply had to fill out the form AND NOTHING ELSE! The guys take care of the rest, I just collect my money in my PayPal account.",
           "author": "Tony Smith",
           "membership": "Member since October 2021"
         },
@@ -630,22 +630,22 @@
           "p": [
             "For the purposes of these Terms and Conditions:",
             "\"Rental\" of the rental of your Facebook profile to which these Terms and Conditions apply.",
-            "\"FbAngel\" , this website, their respective agents, subcontractors, directors and employees.",
+            "\"FB4cash\" , this website, their respective agents, subcontractors, directors and employees.",
             "\"Owner\" is the person who provided the Facebook profile that is being rented.",
             "\"Monthly Payment\" is the amount paid to the account owner at the end of each month that their account is in use.",
             "\"Referral commission\" is the amount paid to someone for recommending another Facebook profile owner to lead to a successful Business Manager setup.",
             "\"Facebook Profile\" is the access to the Business Manager that is rented.",
             "\"Business Manager\" is a Facebook tool that helps to organize and manage your advertising accounts completely independent of your Facebook profile.",
-            "\"Business Manager Administrator\" the person who actively manages the Business Manager on behalf of FbAngel and who will be added to monitor the advertising accounts.",
+            "\"Business Manager Administrator\" the person who actively manages the Business Manager on behalf of FB4cash and who will be added to monitor the advertising accounts.",
             "\"Ad account\" is the Facebook advertising account that is configured within Business Manager.",
             "\"Business Manager Configuration\" the configuration process for the Facebook Business Manager to be rented.",
             "\"Facebook Page\" the Facebook page created with the Owner's account.",
-            "\"Advertising\" the ads created by FbAngel in the Owner's account.",
+            "\"Advertising\" the ads created by FB4cash in the Owner's account.",
             "\"Commission for configuration\" is the amount paid to the owner of the account for a correct configuration of the Business Manager.",
             "\"Third-party social media service\" means any service or content (including data, information, products, or services) provided by a third party that may be displayed, included, or made available by the Service.",
-            "\"Website\" refers to My site, accessible from FbAngel.com",
+            "\"Website\" refers to My site, accessible from FB4cash.com",
             "\"You or the Owner \"means the person who provided the Facebook advertising account that is being rented and, in any event, the person accessing or using the Service, or the company or other legal entity on whose behalf such person accesses or uses the Service, as appropriate. ",
-            "\"Company\" (referred to as \"the Company\" ,\"We\" or \"Our\" in this Agreement) refers to FB Angel."
+            "\"Company\" (referred to as \"the Company\" ,\"We\" or \"Our\" in this Agreement) refers to FB4cash."
           ]
         },
         "recognition": {
@@ -679,31 +679,31 @@
         },
         "compensation": {
           "title": "Compensation",
-          "p": ["The Owner agrees to indemnify FbAngel if he has in any way violated the promise of ownership clause."]
+          "p": ["The Owner agrees to indemnify FB4cash if he has in any way violated the promise of ownership clause."]
         },
         "payment": {
           "title": "Payment",
           "p": [
-            "FbAngel will pay the owner the setup fee once the first review has been done and approved, and a Business Manager has been properly setup."
+            "FB4cash will pay the owner the setup fee once the first review has been done and approved, and a Business Manager has been properly setup."
           ]
         },
         "payment_calendar": {
           "title": "Payment schedule",
           "p": [
-            "FbAngel will pay the Owner as follows:",
+            "FB4cash will pay the Owner as follows:",
             "First payment directly after successful setup and after as follows:",
             "The profiles activated in the first fortnight of the month (first 2 weeks) will be paid in the week of the 15th of the following month",
             "Profiles activated within the second half of the month (last 2 weeks) will be paid in the week of the last week of the following month.",
             "If the last day of the month falls on a weekend or holiday, the payment will be sent the next business day.",
-            "FbAngel will not pay for a Facebook profile where it has not been possible to configure the Business Manager correctly. FbAngel will pay the monthly payment for a Facebook profile that is active for half the month or more for the particular month.",
+            "FB4cash will not pay for a Facebook profile where it has not been possible to configure the Business Manager correctly. FB4cash will pay the monthly payment for a Facebook profile that is active for half the month or more for the particular month.",
             "Payments for each referral that results in a successful setup are paid at the end of the month.",
-            "FbAngel will not pay for a Facebook profile where it has not been possible to correctly configure the Business Manager."
+            "FB4cash will not pay for a Facebook profile where it has not been possible to correctly configure the Business Manager."
           ]
         },
         "payment_method": {
           "title": "Payment Method",
           "p": [
-            "FbAngel will send payments by Paypal and bank transfer.",
+            "FB4cash will send payments by Paypal and bank transfer.",
             "To be paid by bank it is necessary to send a copy of a document to comply with the requirements of our bank."
           ]
         },
@@ -711,19 +711,19 @@
           "title": "Account rental termination",
           "p": [
             "The rental period will end on the day the Business Manager is no longer in use.",
-            "FbAngel, at its sole discretion, may decide that it no longer requires the account and may interrupt the rental period.",
+            "FB4cash, at its sole discretion, may decide that it no longer requires the account and may interrupt the rental period.",
             "The Rental will also be canceled if the Business Manager is deactivated by the Owner or Facebook.",
-            "If the account was used for 15 days or more that month, FbAngel will make the payment of the monthly payment.",
+            "If the account was used for 15 days or more that month, FB4cash will make the payment of the monthly payment.",
             "The rental period will also end if there is a material breach of these Terms."
           ]
         },
         "material_violation": {
           "title": "Material violation",
           "p": [
-            "In case of material breach, FbAngel will not be responsible for paying any future payments.",
-            "Log into Account from any device that was not used before the start of the rental period. Pause, stop, change or interfere in any way with FbAngel advertisements.",
-            "Delete or remove FbAngel Business Manager or Administrator from Facebook page.",
-            "Delete or remove the FbAngel account manager from the Ad Account Manager role. Use of the FbAngel payment method for any purpose other than to pay for Ads created by FbAngel. Allow any other person or business to access or use the Ad Account . ",
+            "In case of material breach, FB4cash will not be responsible for paying any future payments.",
+            "Log into Account from any device that was not used before the start of the rental period. Pause, stop, change or interfere in any way with FB4cash advertisements.",
+            "Delete or remove FB4cash Business Manager or Administrator from Facebook page.",
+            "Delete or remove the FB4cash account manager from the Ad Account Manager role. Use of the FB4cash payment method for any purpose other than to pay for Ads created by FB4cash. Allow any other person or business to access or use the Ad Account . ",
             "Login to Facebook with a desktop or laptop from a new location that you had not logged in to in the period before the rental period.",
             "Login to Business Manager for any reason."
           ]
@@ -818,22 +818,22 @@
       "p": [
         "For the purposes of these Terms and Conditions:",
         "\"Rental\" of the rental of your Facebook profile to which these Terms and Conditions apply.",
-        "\"FbAngel\" , this website, their respective agents, subcontractors, directors and employees.",
+        "\"FB4cash\" , this website, their respective agents, subcontractors, directors and employees.",
         "\"Owner\" is the person who provided the Facebook profile that is being rented.",
         "\"Monthly Payment\" is the amount paid to the account owner at the end of each month that their account is in use.",
         "\"Referral commission\" is the amount paid to someone for recommending another Facebook profile owner to lead to a successful Business Manager setup.",
         "\"Facebook Profile\" is the access to the Business Manager that is rented.",
         "\"Business Manager\" is a Facebook tool that helps to organize and manage your advertising accounts completely independent of your Facebook profile.",
-        "\"Business Manager Administrator\" the person who actively manages the Business Manager on behalf of FbAngel and who will be added to monitor the advertising accounts.",
+        "\"Business Manager Administrator\" the person who actively manages the Business Manager on behalf of FB4cash and who will be added to monitor the advertising accounts.",
         "\"Ad account\" is the Facebook advertising account that is configured within Business Manager.",
         "\"Business Manager Configuration\" the configuration process for the Facebook Business Manager to be rented.",
         "\"Facebook Page\" the Facebook page created with the Owner's account.",
-        "\"Advertising\" the ads created by FbAngel in the Owner's account.",
+        "\"Advertising\" the ads created by FB4cash in the Owner's account.",
         "\"Commission for configuration\" is the amount paid to the owner of the account for a correct configuration of the Business Manager.",
         "\"Third-party social media service\" means any service or content (including data, information, products, or services) provided by a third party that may be displayed, included, or made available by the Service.",
-        "\"Website\" refers to My site, accessible from FbAngel.com",
+        "\"Website\" refers to My site, accessible from FB4cash.com",
         "\"You or the Owner \"means the person who provided the Facebook advertising account that is being rented and, in any event, the person accessing or using the Service, or the company or other legal entity on whose behalf such person accesses or uses the Service, as appropriate. ",
-        "\"Company\" (referred to as \"the Company\" ,\"We\" or \"Our\" in this Agreement) refers to FB Angel."
+        "\"Company\" (referred to as \"the Company\" ,\"We\" or \"Our\" in this Agreement) refers to FB4cash."
       ]
     },
     "recognition": {
@@ -867,31 +867,31 @@
     },
     "compensation": {
       "title": "Compensation",
-      "p": ["The Owner agrees to indemnify FbAngel if he has in any way violated the promise of ownership clause."]
+      "p": ["The Owner agrees to indemnify FB4cash if he has in any way violated the promise of ownership clause."]
     },
     "payment": {
       "title": "Payment",
       "p": [
-        "FbAngel will pay the owner the setup fee once the first review has been done and approved, and a Business Manager has been properly setup."
+        "FB4cash will pay the owner the setup fee once the first review has been done and approved, and a Business Manager has been properly setup."
       ]
     },
     "payment_calendar": {
       "title": "Payment schedule",
       "p": [
-        "FbAngel will pay the Owner as follows:",
+        "FB4cash will pay the Owner as follows:",
         "First payment directly after successful setup and after as follows:",
         "The profiles activated in the first fortnight of the month (first 2 weeks) will be paid in the week of the 15th of the following month",
         "Profiles activated within the second half of the month (last 2 weeks) will be paid in the week of the last week of the following month.",
         "If the last day of the month falls on a weekend or holiday, the payment will be sent the next business day.",
-        "FbAngel will not pay for a Facebook profile where it has not been possible to configure the Business Manager correctly. FbAngel will pay the monthly payment for a Facebook profile that is active for half the month or more for the particular month.",
+        "FB4cash will not pay for a Facebook profile where it has not been possible to configure the Business Manager correctly. FB4cash will pay the monthly payment for a Facebook profile that is active for half the month or more for the particular month.",
         "Payments for each referral that results in a successful setup are paid at the end of the month.",
-        "FbAngel will not pay for a Facebook profile where it has not been possible to correctly configure the Business Manager."
+        "FB4cash will not pay for a Facebook profile where it has not been possible to correctly configure the Business Manager."
       ]
     },
     "payment_method": {
       "title": "Payment Method",
       "p": [
-        "FbAngel will send payments by Paypal and bank transfer.",
+        "FB4cash will send payments by Paypal and bank transfer.",
         "To be paid by bank it is necessary to send a copy of a document to comply with the requirements of our bank."
       ]
     },
@@ -899,19 +899,19 @@
       "title": "Account rental termination",
       "p": [
         "The rental period will end on the day the Business Manager is no longer in use.",
-        "FbAngel, at its sole discretion, may decide that it no longer requires the account and may interrupt the rental period.",
+        "FB4cash, at its sole discretion, may decide that it no longer requires the account and may interrupt the rental period.",
         "The Rental will also be canceled if the Business Manager is deactivated by the Owner or Facebook.",
-        "If the account was used for 15 days or more that month, FbAngel will make the payment of the monthly payment.",
+        "If the account was used for 15 days or more that month, FB4cash will make the payment of the monthly payment.",
         "The rental period will also end if there is a material breach of these Terms."
       ]
     },
     "material_violation": {
       "title": "Material violation",
       "p": [
-        "In case of material breach, FbAngel will not be responsible for paying any future payments.",
-        "Log into Account from any device that was not used before the start of the rental period. Pause, stop, change or interfere in any way with FbAngel advertisements.",
-        "Delete or remove FbAngel Business Manager or Administrator from Facebook page.",
-        "Delete or remove the FbAngel account manager from the Ad Account Manager role. Use of the FbAngel payment method for any purpose other than to pay for Ads created by FbAngel. Allow any other person or business to access or use the Ad Account . ",
+        "In case of material breach, FB4cash will not be responsible for paying any future payments.",
+        "Log into Account from any device that was not used before the start of the rental period. Pause, stop, change or interfere in any way with FB4cash advertisements.",
+        "Delete or remove FB4cash Business Manager or Administrator from Facebook page.",
+        "Delete or remove the FB4cash account manager from the Ad Account Manager role. Use of the FB4cash payment method for any purpose other than to pay for Ads created by FB4cash. Allow any other person or business to access or use the Ad Account . ",
         "Login to Facebook with a desktop or laptop from a new location that you had not logged in to in the period before the rental period.",
         "Login to Business Manager for any reason."
       ]
