--- a/client/src/locales/es/translation.json
+++ b/client/src/locales/es/translation.json
@@ -77,13 +77,13 @@
       "testimonies": [
         {
           "number": "1",
-          "testimony": "He colaborado con fbangel durante más de un año, no he tenido ningún problema. El dinero siempre llega a tiempo y siempre recibo respuestas a todas mis preguntas. Es genial que no tenga que hacer nada y, además, no afecta a mi perfil en absoluto. Digamos que simplemente gano dinero alquilando mi cuenta de Facebook. Se lo recomiendo a todo el mundo!",
+          "testimony": "He colaborado con fb4cash durante más de un año, no he tenido ningún problema. El dinero siempre llega a tiempo y siempre recibo respuestas a todas mis preguntas. Es genial que no tenga que hacer nada y, además, no afecta a mi perfil en absoluto. Digamos que simplemente gano dinero alquilando mi cuenta de Facebook. Se lo recomiendo a todo el mundo!",
           "author": "Ana Martín",
           "membership": "Miembro desde mayo 2021"
         },
         {
           "number": "2",
-          "testimony": "Decidí intentar ganar dinero con FbAngel, ya que me interesaba saber cómo funciona. Puedo decir que es una gran manera de tener ingresos adicionales. ¡Simplemente he tenido que rellenar el formulario Y NADA MAS! Los chicos se encargan del resto yo simplemente me limito a recoger mi dinero en mi cuenta PayPal",
+          "testimony": "Decidí intentar ganar dinero con FB4cash, ya que me interesaba saber cómo funciona. Puedo decir que es una gran manera de tener ingresos adicionales. ¡Simplemente he tenido que rellenar el formulario Y NADA MAS! Los chicos se encargan del resto yo simplemente me limito a recoger mi dinero en mi cuenta PayPal",
           "author": "Tony Smith",
           "membership": "Miembro desde octubre 2021"
         },
@@ -630,22 +630,22 @@
           "p": [
             "A los efectos de estos Términos y Condiciones:",
             "“Alquiler” del alquiler de su perfil de Facebook al que se aplican estos Términos y Condiciones.",
-            "“FbAngel”, esta web, sus respectivos agentes, subcontratistas,   directores y empleados.",
+            "“FB4cash”, esta web, sus respectivos agentes, subcontratistas,   directores y empleados.",
             "“Propietario” es la persona que proporcionó el perfil de Facebook que se está alquilando.",
             "“Pago Mensual” es la cantidad pagada al propietario de la cuenta al final de cada mes que su cuenta está en uso.",
             "“Comisión por referido” es la cantidad pagada a alguien por recomendar a otro propietario de perfil de Facebook que conluya en una configuración exitosa del Business Manager.",
             "“Perfil de Facebook” es el acceso al Business Manager que se alquila.",
             "“Business Manager” es una herramienta de Facebook que ayuda a organizar y administrar sus cuentas publicitarias completamente independientes de su perfil de Facebook.",
-            "“Administrador de Business Manager” la persona que administra activamente el Business Manager en nombre de FbAngel y que se agregará para supervisar las cuentas publicitarias.",
+            "“Administrador de Business Manager” la persona que administra activamente el Business Manager en nombre de FB4cash y que se agregará para supervisar las cuentas publicitarias.",
             "“Cuenta de anuncios” es la cuenta publicitaria de Facebook que está configurada dentro de Business Manager.",
             "“Configuración de Business Manager” el proceso de configuración del Business Manager de Facebook que se alquilará.",
             "“Página de Facebook” la página de Facebook creada con la cuenta del Propietario.",
-            "“Publicidad” los anuncios creados por FbAngel en la cuenta del Propietario.",
+            "“Publicidad” los anuncios creados por FB4cash en la cuenta del Propietario.",
             "“Comisión por configuración” es el importe pagado al propietario de la cuenta para una configuración correcta del Business Manager.",
             "“Servicio de redes sociales de terceros” significa cualquier servicio o contenido (incluidos datos, información, productos o servicios) proporcionado por un tercero que puede ser mostrado, incluido o puesto a disposición por el Servicio.",
-            "“Sitio web” se refiere a Mi sitio, accesible desde FbAngel.com",
+            "“Sitio web” se refiere a Mi sitio, accesible desde FB4cash.com",
             "“”Usted o el Propietario”” significa la persona que proporcionó lacuenta de publicidad de Facebook que se está alquilando y, en cualquier caso, la persona que accede o usa el Servicio, o la empresa u otra entidad legal en nombre de la cual dicha persona accede o usa el Servicio, según corresponda.",
-            "“Compañía” (denominada “la Compañía”, “Nosotros” o “Nuestro”  este Acuerdo) se refiere a FB Angel."
+            "“Compañía” (denominada “la Compañía”, “Nosotros” o “Nuestro”  este Acuerdo) se refiere a FB4cash."
           ]
         },
         "recognition": {
@@ -680,32 +680,32 @@
         "compensation": {
           "title": "Indemnización",
           "p": [
-            "El Propietario se compromete a indemnizar a FbAngel si de alguna manera ha violado la cláusula promesa de propiedad."
+            "El Propietario se compromete a indemnizar a FB4cash si de alguna manera ha violado la cláusula promesa de propiedad."
           ]
         },
         "payment": {
           "title": "Pago",
           "p": [
-            "FbAngel pagará al propietario la comisión de configuración una vez que se haya realizado y aprobado la primera revisión, y se haya configurado correctamente un Business Manager."
+            "FB4cash pagará al propietario la comisión de configuración una vez que se haya realizado y aprobado la primera revisión, y se haya configurado correctamente un Business Manager."
           ]
         },
         "payment_calendar": {
           "title": "Calendario de pago",
           "p": [
-            "FbAngel pagará al Propietario de la siguiente manera:",
+            "FB4cash pagará al Propietario de la siguiente manera:",
             "Primer pago directamente después de haber terminado la configuración con éxito y después de la siguiente forma:",
             "Los perfiles activados en la primera quincena del mes (primeras 2 semanas) se pagarán en la semana del 15 del mes siguiente",
             "Los perfiles activados dentro de la segunda quincena del mes (2 últimas semanas) se pagarán en la semana de la última semana del mes siguiente.        ",
             "Si el último día del mes cae en un fin de semana o día festivo, el pago se enviará el siguiente día hábil.",
-            "FbAngel no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager. FbAngel pagará el pago mensual de un perfil de Facebook que esté activo durante la mitad del mes o más para el mes en particular.",
+            "FB4cash no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager. FB4cash pagará el pago mensual de un perfil de Facebook que esté activo durante la mitad del mes o más para el mes en particular.",
             "Los pagos por cada referido que resulte en una configuración exitosa se pagan al final del mes.",
-            "FbAngel no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager."
+            "FB4cash no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager."
           ]
         },
         "payment_method": {
           "title": "Forma de pago",
           "p": [
-            "FbAngel enviará pagos por Paypal y transferencia bancaria.",
+            "FB4cash enviará pagos por Paypal y transferencia bancaria.",
             "Para ser pagado por banco es necesario enviar una copia de un documento para cumplir con los requisitos de nuestro banco."
           ]
         },
@@ -713,19 +713,19 @@
           "title": "Terminación del alquiler de la cuenta",
           "p": [
             "El período de alquiler finalizará el día en que el Business Manager ya no esté en uso.",
-            "FbAngel, a su entera discreción, puede decidir que ya no requiere la cuenta y puede interrumpir el período de alquiler.",
+            "FB4cash, a su entera discreción, puede decidir que ya no requiere la cuenta y puede interrumpir el período de alquiler.",
             "El Alquiler también se cancelará si el Business Manager es desactivado por el Propietario o Facebook.",
-            "Si la cuenta se utilizó durante 15 días o más ese mes, FbAngel realizará el pago del pago mensual.",
+            "Si la cuenta se utilizó durante 15 días o más ese mes, FB4cash realizará el pago del pago mensual.",
             "El período de alquiler también terminará si se produce un incumplimiento material de estos Términos."
           ]
         },
         "material_violation": {
           "title": "Violación material",
           "p": [
-            "En caso de incumplimiento material, FbAngel no será responsable de pagar ningún pago futuro.",
-            "Inicie sesión en Cuenta desde cualquier dispositivo que no se haya utilizado antes del comienzo del período de alquiler. Pausar, detener, cambiar o interferir de alguna manera con los anuncios de FbAngel.",
-            "Eliminar o quitar FbAngel Business Manager o Administrador de la página de Facebook.",
-            "Eliminar o quitar el administrador de cuentas de FbAngel del rol Administrador de cuentas publicitarias. Uso del método de pago FbAngel para cualquier propósito que no sea pagar por los Anuncios creados por FbAngel. Permitir que cualquier otra persona o empresa acceda o utilice la Cuenta publicitaria.",
+            "En caso de incumplimiento material, FB4cash no será responsable de pagar ningún pago futuro.",
+            "Inicie sesión en Cuenta desde cualquier dispositivo que no se haya utilizado antes del comienzo del período de alquiler. Pausar, detener, cambiar o interferir de alguna manera con los anuncios de FB4cash.",
+            "Eliminar o quitar FB4cash Business Manager o Administrador de la página de Facebook.",
+            "Eliminar o quitar el administrador de cuentas de FB4cash del rol Administrador de cuentas publicitarias. Uso del método de pago FB4cash para cualquier propósito que no sea pagar por los Anuncios creados por FB4cash. Permitir que cualquier otra persona o empresa acceda o utilice la Cuenta publicitaria.",
             "Iniciar sesión en Facebook con un ordenador de sobremesa o portátil desde una nueva ubicación que no había iniciado sesión en el período anterior al período de alquiler.",
             "Iniciar sesión en el Business Manager por cualquier motivo."
           ]
@@ -820,22 +820,22 @@
       "p": [
         "A los efectos de estos Términos y Condiciones:",
         "“Alquiler” del alquiler de su perfil de Facebook al que se aplican estos Términos y Condiciones.",
-        "“FbAngel”, esta web, sus respectivos agentes, subcontratistas,   directores y empleados.",
+        "“FB4cash”, esta web, sus respectivos agentes, subcontratistas,   directores y empleados.",
         "“Propietario” es la persona que proporcionó el perfil de Facebook que se está alquilando.",
         "“Pago Mensual” es la cantidad pagada al propietario de la cuenta al final de cada mes que su cuenta está en uso.",
         "“Comisión por referido” es la cantidad pagada a alguien por recomendar a otro propietario de perfil de Facebook que conluya en una configuración exitosa del Business Manager.",
         "“Perfil de Facebook” es el acceso al Business Manager que se alquila.",
         "“Business Manager” es una herramienta de Facebook que ayuda a organizar y administrar sus cuentas publicitarias completamente independientes de su perfil de Facebook.",
-        "“Administrador de Business Manager” la persona que administra activamente el Business Manager en nombre de FbAngel y que se agregará para supervisar las cuentas publicitarias.",
+        "“Administrador de Business Manager” la persona que administra activamente el Business Manager en nombre de FB4cash y que se agregará para supervisar las cuentas publicitarias.",
         "“Cuenta de anuncios” es la cuenta publicitaria de Facebook que está configurada dentro de Business Manager.",
         "“Configuración de Business Manager” el proceso de configuración del Business Manager de Facebook que se alquilará.",
         "“Página de Facebook” la página de Facebook creada con la cuenta del Propietario.",
-        "“Publicidad” los anuncios creados por FbAngel en la cuenta del Propietario.",
+        "“Publicidad” los anuncios creados por FB4cash en la cuenta del Propietario.",
         "“Comisión por configuración” es el importe pagado al propietario de la cuenta para una configuración correcta del Business Manager.",
         "“Servicio de redes sociales de terceros” significa cualquier servicio o contenido (incluidos datos, información, productos o servicios) proporcionado por un tercero que puede ser mostrado, incluido o puesto a disposición por el Servicio.",
-        "“Sitio web” se refiere a Mi sitio, accesible desde FbAngel.com",
+        "“Sitio web” se refiere a Mi sitio, accesible desde FB4cash.com",
         "“”Usted o el Propietario”” significa la persona que proporcionó lacuenta de publicidad de Facebook que se está alquilando y, en cualquier caso, la persona que accede o usa el Servicio, o la empresa u otra entidad legal en nombre de la cual dicha persona accede o usa el Servicio, según corresponda.",
-        "“Compañía” (denominada “la Compañía”, “Nosotros” o “Nuestro”  este Acuerdo) se refiere a FB Angel."
+        "“Compañía” (denominada “la Compañía”, “Nosotros” o “Nuestro”  este Acuerdo) se refiere a FB4cash."
       ]
     },
     "recognition": {
@@ -870,32 +870,32 @@
     "compensation": {
       "title": "Indemnización",
       "p": [
-        "El Propietario se compromete a indemnizar a FbAngel si de alguna manera ha violado la cláusula promesa de propiedad."
+        "El Propietario se compromete a indemnizar a FB4cash si de alguna manera ha violado la cláusula promesa de propiedad."
       ]
     },
     "payment": {
       "title": "Pago",
       "p": [
-        "FbAngel pagará al propietario la comisión de configuración una vez que se haya realizado y aprobado la primera revisión, y se haya configurado correctamente un Business Manager."
+        "FB4cash pagará al propietario la comisión de configuración una vez que se haya realizado y aprobado la primera revisión, y se haya configurado correctamente un Business Manager."
       ]
     },
     "payment_calendar": {
       "title": "Calendario de pago",
       "p": [
-        "FbAngel pagará al Propietario de la siguiente manera:",
+        "FB4cash pagará al Propietario de la siguiente manera:",
         "Primer pago directamente después de haber terminado la configuración con éxito y después de la siguiente forma:",
         "Los perfiles activados en la primera quincena del mes (primeras 2 semanas) se pagarán en la semana del 15 del mes siguiente",
         "Los perfiles activados dentro de la segunda quincena del mes (2 últimas semanas) se pagarán en la semana de la última semana del mes siguiente.        ",
         "Si el último día del mes cae en un fin de semana o día festivo, el pago se enviará el siguiente día hábil.",
-        "FbAngel no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager. FbAngel pagará el pago mensual de un perfil de Facebook que esté activo durante la mitad del mes o más para el mes en particular.",
+        "FB4cash no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager. FB4cash pagará el pago mensual de un perfil de Facebook que esté activo durante la mitad del mes o más para el mes en particular.",
         "Los pagos por cada referido que resulte en una configuración exitosa se pagan al final del mes.",
-        "FbAngel no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager."
+        "FB4cash no pagará por un perfil de Facebook donde no haya sido posible configurar correctament el Business Manager."
       ]
     },
     "payment_method": {
       "title": "Forma de pago",
       "p": [
-        "FbAngel enviará pagos por Paypal y transferencia bancaria.",
+        "FB4cash enviará pagos por Paypal y transferencia bancaria.",
         "Para ser pagado por banco es necesario enviar una copia de un documento para cumplir con los requisitos de nuestro banco."
       ]
     },
@@ -903,19 +903,19 @@
       "title": "Terminación del alquiler de la cuenta",
       "p": [
         "El período de alquiler finalizará el día en que el Business Manager ya no esté en uso.",
-        "FbAngel, a su entera discreción, puede decidir que ya no requiere la cuenta y puede interrumpir el período de alquiler.",
+        "FB4cash, a su entera discreción, puede decidir que ya no requiere la cuenta y puede interrumpir el período de alquiler.",
         "El Alquiler también se cancelará si el Business Manager es desactivado por el Propietario o Facebook.",
-        "Si la cuenta se utilizó durante 15 días o más ese mes, FbAngel realizará el pago del pago mensual.",
+        "Si la cuenta se utilizó durante 15 días o más ese mes, FB4cash realizará el pago del pago mensual.",
         "El período de alquiler también terminará si se produce un incumplimiento material de estos Términos."
       ]
     },
     "material_violation": {
       "title": "Violación material",
       "p": [
-        "En caso de incumplimiento material, FbAngel no será responsable de pagar ningún pago futuro.",
-        "Inicie sesión en Cuenta desde cualquier dispositivo que no se haya utilizado antes del comienzo del período de alquiler. Pausar, detener, cambiar o interferir de alguna manera con los anuncios de FbAngel.",
-        "Eliminar o quitar FbAngel Business Manager o Administrador de la página de Facebook.",
-        "Eliminar o quitar el administrador de cuentas de FbAngel del rol Administrador de cuentas publicitarias. Uso del método de pago FbAngel para cualquier propósito que no sea pagar por los Anuncios creados por FbAngel. Permitir que cualquier otra persona o empresa acceda o utilice la Cuenta publicitaria.",
+        "En caso de incumplimiento material, FB4cash no será responsable de pagar ningún pago futuro.",
+        "Inicie sesión en Cuenta desde cualquier dispositivo que no se haya utilizado antes del comienzo del período de alquiler. Pausar, detener, cambiar o interferir de alguna manera con los anuncios de FB4cash.",
+        "Eliminar o quitar FB4cash Business Manager o Administrador de la página de Facebook.",
+        "Eliminar o quitar el administrador de cuentas de FB4cash del rol Administrador de cuentas publicitarias. Uso del método de pago FB4cash para cualquier propósito que no sea pagar por los Anuncios creados por FB4cash. Permitir que cualquier otra persona o empresa acceda o utilice la Cuenta publicitaria.",
         "Iniciar sesión en Facebook con un ordenador de sobremesa o portátil desde una nueva ubicación que no había iniciado sesión en el período anterior al período de alquiler.",
         "Iniciar sesión en el Business Manager por cualquier motivo."
       ]
