--- a/client/src/locales/fr/translation.json
+++ b/client/src/locales/fr/translation.json
@@ -78,13 +78,13 @@
       "testimonies": [
         {
           "number": "1",
-          "testimony": "Je collabore avec fbangel depuis plus d'un an, je n'ai eu aucun problème. L'argent est toujours à l'heure et je reçois toujours des réponses à toutes mes questions. C'est génial que je n'aie rien à faire et, en plus, cela n'affecte pas du tout mon profil. Disons que je gagne juste de l'argent en louant mon compte Facebook. Je le recommande à tout le monde ! ",
+          "testimony": "Je collabore avec fb4cash depuis plus d'un an, je n'ai eu aucun problème. L'argent est toujours à l'heure et je reçois toujours des réponses à toutes mes questions. C'est génial que je n'aie rien à faire et, en plus, cela n'affecte pas du tout mon profil. Disons que je gagne juste de l'argent en louant mon compte Facebook. Je le recommande à tout le monde ! ",
           "author": "Ana Martín",
           "membership": "Membre depuis mai 2021"
         },
         {
           "number": "2",
-          "testimony": "J'ai décidé d'essayer de gagner de l'argent avec FbAngel, car j'étais intéressé de savoir comment cela fonctionne. Je peux dire que c'est un excellent moyen d'avoir un revenu supplémentaire. J'ai juste eu à remplir le formulaire ET RIEN D'AUTRE ! Les gars s'occupent du reste je récupère juste mon argent sur mon compte PayPal ",
+          "testimony": "J'ai décidé d'essayer de gagner de l'argent avec FB4cash, car j'étais intéressé de savoir comment cela fonctionne. Je peux dire que c'est un excellent moyen d'avoir un revenu supplémentaire. J'ai juste eu à remplir le formulaire ET RIEN D'AUTRE ! Les gars s'occupent du reste je récupère juste mon argent sur mon compte PayPal ",
           "author": "Tony Smith",
           "membership": "Membre depuis octobre 2021"
         },
@@ -638,22 +638,22 @@
           "p": [
             "Aux fins des présentes conditions générales :",
             "\"Location\" de la location de votre profil Facebook auquel s'appliquent les présentes Conditions Générales d'Utilisation.",
-            "\"FbAngel\" , ce site Web, leurs agents, sous-traitants, directeurs et employés respectifs.",
+            "\"FB4cash\" , ce site Web, leurs agents, sous-traitants, directeurs et employés respectifs.",
             "\"Propriétaire\" est la personne qui a fourni le profil Facebook qui est loué.",
             "\"Paiement mensuel\" est le montant payé au titulaire du compte à la fin de chaque mois d'utilisation de son compte.",
             "\"Commission de parrainage\" est le montant payé à quelqu'un pour avoir recommandé un autre propriétaire de profil Facebook pour mener à une configuration réussie de Business Manager.",
             "\"profil Facebook\" est l'accès au Business Manager qui est loué.",
             "\"Business Manager\" est un outil Facebook qui permet d'organiser et de gérer vos comptes publicitaires de manière totalement indépendante de votre profil Facebook.",
-            "\"Business Manager Administrator\" la personne qui gère activement le Business Manager pour le compte de FbAngel et qui sera ajoutée pour surveiller les comptes publicitaires.",
+            "\"Business Manager Administrator\" la personne qui gère activement le Business Manager pour le compte de FB4cash et qui sera ajoutée pour surveiller les comptes publicitaires.",
             "\"Compte publicitaire\" est le compte publicitaire Facebook qui est configuré dans Business Manager.",
             "\"Paramètres du Business Manager\" le processus de configuration du Facebook Business Manager à louer.",
             "\"Page Facebook\" la page Facebook créée avec le compte du Propriétaire.",
-            "\"Publicité\" les publicités créées par FbAngel dans le compte du Propriétaire.",
+            "\"Publicité\" les publicités créées par FB4cash dans le compte du Propriétaire.",
             "\"Commission de configuration\" est le montant payé au titulaire du compte pour une configuration correcte du Business Manager.",
             "\"Service de médias sociaux tiers\"  désigne tout service ou contenu (y compris les données, informations, produits ou services) fourni par un tiers qui peut être affiché, inclus ou mis à disposition par le Service. ",
-            "\"Site Web\"  désigne Mon site, accessible depuis FbAngel.com ",
+            "\"Site Web\"  désigne Mon site, accessible depuis FB4cash.com ",
             "\"Vous ou Propriétaire\" désigne la personne qui a fourni le compte publicitaire Facebook en cours de location et, en tout état de cause, la personne accédant ou utilisant le Service, ou la société ou autre entité juridique au nom de laquelle ladite personne accède ou utilise le Service, selon le cas. ",
-            "\"Société\" (appelée \"la Société\" , \" Nous\"  ou \"Notre\"  le présent Contrat) fait référence à FB Angel."
+            "\"Société\" (appelée \"la Société\" , \" Nous\"  ou \"Notre\"  le présent Contrat) fait référence à FB4cash."
           ]
         },
         "recognition": {
@@ -688,32 +688,32 @@
         "compensation": {
           "title": "Indemnisation",
           "p": [
-            "Le propriétaire s'engage à indemniser FbAngel s'il a violé de quelque manière que ce soit la clause de promesse de propriété."
+            "Le propriétaire s'engage à indemniser FB4cash s'il a violé de quelque manière que ce soit la clause de promesse de propriété."
           ]
         },
         "payment": {
           "title": "Paiement",
           "p": [
-            "FbAngel paiera au propriétaire les frais d'installation une fois que le premier examen aura été effectué et approuvé, et qu'un directeur commercial aura été configuré avec succès."
+            "FB4cash paiera au propriétaire les frais d'installation une fois que le premier examen aura été effectué et approuvé, et qu'un directeur commercial aura été configuré avec succès."
           ]
         },
         "payment_calendar": {
           "title": "Calendrier de paiement",
           "p": [
-            "FbAngel paiera le propriétaire comme suit :",
+            "FB4cash paiera le propriétaire comme suit :",
             "Premier paiement directement après une configuration réussie et après comme suit :",
             "Les profils activés dans la première quinzaine du mois (2 premières semaines) seront payés dans la semaine du 15 du mois suivant",
             "Les profils activés dans la seconde quinzaine du mois (les 2 dernières semaines) seront payés dans la semaine de la dernière semaine du mois suivant.",
             "Si le dernier jour du mois tombe un week-end ou un jour férié, le paiement sera envoyé le jour ouvrable suivant.",
-            "FbAngel ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager. FbAngel paiera le paiement mensuel pour un profil Facebook actif pendant un demi-mois ou plus pour le mois en question.",
+            "FB4cash ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager. FB4cash paiera le paiement mensuel pour un profil Facebook actif pendant un demi-mois ou plus pour le mois en question.",
             "Les paiements pour chaque référence qui aboutit à une configuration réussie sont payés à la fin du mois.",
-            "FbAngel ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager."
+            "FB4cash ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager."
           ]
         },
         "payment_method": {
           "title": "Mode de paiement",
           "p": [
-            "FbAngel enverra les paiements par Paypal et virement bancaire.",
+            "FB4cash enverra les paiements par Paypal et virement bancaire.",
             "Pour être payé par banque, il est nécessaire d'envoyer une copie d'un document pour se conformer aux exigences de notre banque."
           ]
         },
@@ -721,19 +721,19 @@
           "title": "Résiliation de la location du compte",
           "p": [
             "La période de location prendra fin le jour où le Business Manager n'est plus utilisé.",
-            "FbAngel, à sa seule discrétion, peut décider qu'il n'a plus besoin du compte et peut interrompre la période de location.",
+            "FB4cash, à sa seule discrétion, peut décider qu'il n'a plus besoin du compte et peut interrompre la période de location.",
             "La Location sera également annulée si le Business Manager est désactivé par le Propriétaire ou Facebook.",
-            "Si le compte a été utilisé pendant 15 jours ou plus ce mois-là, FbAngel effectuera le paiement du paiement mensuel.",
+            "Si le compte a été utilisé pendant 15 jours ou plus ce mois-là, FB4cash effectuera le paiement du paiement mensuel.",
             "La période de location prendra également fin en cas de violation substantielle des présentes Conditions."
           ]
         },
         "material_violation": {
           "title": "Vie matérielle",
           "p": [
-            "En cas de violation substantielle, FbAngel ne sera pas responsable du paiement de paiements futurs.",
-            "Connectez-vous au compte à partir de tout appareil qui n'a pas été utilisé avant le début de la période de location. Mettez en pause, arrêtez, modifiez ou interférez de quelque manière que ce soit avec les publicités FbAngel.",
-            "Supprimer ou supprimer FbAngel Business Manager ou Administrator de la page Facebook.",
-            "Supprimez ou supprimez le gestionnaire de compte FbAngel du rôle de gestionnaire de compte publicitaire. Utilisation du mode de paiement FbAngel à des fins autres que le paiement des annonces créées par FbAngel. Autorisez toute autre personne ou entreprise à accéder ou à utiliser le compte publicitaire. ",
+            "En cas de violation substantielle, FB4cash ne sera pas responsable du paiement de paiements futurs.",
+            "Connectez-vous au compte à partir de tout appareil qui n'a pas été utilisé avant le début de la période de location. Mettez en pause, arrêtez, modifiez ou interférez de quelque manière que ce soit avec les publicités FB4cash.",
+            "Supprimer ou supprimer FB4cash Business Manager ou Administrator de la page Facebook.",
+            "Supprimez ou supprimez le gestionnaire de compte FB4cash du rôle de gestionnaire de compte publicitaire. Utilisation du mode de paiement FB4cash à des fins autres que le paiement des annonces créées par FB4cash. Autorisez toute autre personne ou entreprise à accéder ou à utiliser le compte publicitaire. ",
             "Connectez-vous à Facebook avec un ordinateur de bureau ou un ordinateur portable à partir d'un nouvel emplacement auquel vous ne vous étiez pas connecté avant la période de location.",
             "Connectez-vous à Business Manager pour quelque raison que ce soit."
           ]
@@ -828,22 +828,22 @@
       "p": [
         "Aux fins des présentes conditions générales :",
         "\"Location\" de la location de votre profil Facebook auquel s'appliquent les présentes Conditions Générales d'Utilisation.",
-        "\"FbAngel\" , ce site Web, leurs agents, sous-traitants, directeurs et employés respectifs.",
+        "\"FB4cash\" , ce site Web, leurs agents, sous-traitants, directeurs et employés respectifs.",
         "\"Propriétaire\" est la personne qui a fourni le profil Facebook qui est loué.",
         "\"Paiement mensuel\" est le montant payé au titulaire du compte à la fin de chaque mois d'utilisation de son compte.",
         "\"Commission de parrainage\" est le montant payé à quelqu'un pour avoir recommandé un autre propriétaire de profil Facebook pour mener à une configuration réussie de Business Manager.",
         "\"profil Facebook\" est l'accès au Business Manager qui est loué.",
         "\"Business Manager\" est un outil Facebook qui permet d'organiser et de gérer vos comptes publicitaires de manière totalement indépendante de votre profil Facebook.",
-        "\"Business Manager Administrator\" la personne qui gère activement le Business Manager pour le compte de FbAngel et qui sera ajoutée pour surveiller les comptes publicitaires.",
+        "\"Business Manager Administrator\" la personne qui gère activement le Business Manager pour le compte de FB4cash et qui sera ajoutée pour surveiller les comptes publicitaires.",
         "\"Compte publicitaire\" est le compte publicitaire Facebook qui est configuré dans Business Manager.",
         "\"Paramètres du Business Manager\" le processus de configuration du Facebook Business Manager à louer.",
         "\"Page Facebook\" la page Facebook créée avec le compte du Propriétaire.",
-        "\"Publicité\" les publicités créées par FbAngel dans le compte du Propriétaire.",
+        "\"Publicité\" les publicités créées par FB4cash dans le compte du Propriétaire.",
         "\"Commission de configuration\" est le montant payé au titulaire du compte pour une configuration correcte du Business Manager.",
         "\"Service de médias sociaux tiers\"  désigne tout service ou contenu (y compris les données, informations, produits ou services) fourni par un tiers qui peut être affiché, inclus ou mis à disposition par le Service. ",
-        "\"Site Web\"  désigne Mon site, accessible depuis FbAngel.com ",
+        "\"Site Web\"  désigne Mon site, accessible depuis FB4cash.com ",
         "\"Vous ou Propriétaire\" désigne la personne qui a fourni le compte publicitaire Facebook en cours de location et, en tout état de cause, la personne accédant ou utilisant le Service, ou la société ou autre entité juridique au nom de laquelle ladite personne accède ou utilise le Service, selon le cas. ",
-        "\"Société\" (appelée \"la Société\" , \" Nous\"  ou \"Notre\"  le présent Contrat) fait référence à FB Angel."
+        "\"Société\" (appelée \"la Société\" , \" Nous\"  ou \"Notre\"  le présent Contrat) fait référence à FB4cash."
       ]
     },
     "recognition": {
@@ -878,32 +878,32 @@
     "compensation": {
       "title": "Indemnisation",
       "p": [
-        "Le propriétaire s'engage à indemniser FbAngel s'il a violé de quelque manière que ce soit la clause de promesse de propriété."
+        "Le propriétaire s'engage à indemniser FB4cash s'il a violé de quelque manière que ce soit la clause de promesse de propriété."
       ]
     },
     "payment": {
       "title": "Paiement",
       "p": [
-        "FbAngel paiera au propriétaire les frais d'installation une fois que le premier examen aura été effectué et approuvé, et qu'un directeur commercial aura été configuré avec succès."
+        "FB4cash paiera au propriétaire les frais d'installation une fois que le premier examen aura été effectué et approuvé, et qu'un directeur commercial aura été configuré avec succès."
       ]
     },
     "payment_calendar": {
       "title": "Calendrier de paiement",
       "p": [
-        "FbAngel paiera le propriétaire comme suit :",
+        "FB4cash paiera le propriétaire comme suit :",
         "Premier paiement directement après une configuration réussie et après comme suit :",
         "Les profils activés dans la première quinzaine du mois (2 premières semaines) seront payés dans la semaine du 15 du mois suivant",
         "Les profils activés dans la seconde quinzaine du mois (les 2 dernières semaines) seront payés dans la semaine de la dernière semaine du mois suivant.",
         "Si le dernier jour du mois tombe un week-end ou un jour férié, le paiement sera envoyé le jour ouvrable suivant.",
-        "FbAngel ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager. FbAngel paiera le paiement mensuel pour un profil Facebook actif pendant un demi-mois ou plus pour le mois en question.",
+        "FB4cash ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager. FB4cash paiera le paiement mensuel pour un profil Facebook actif pendant un demi-mois ou plus pour le mois en question.",
         "Les paiements pour chaque référence qui aboutit à une configuration réussie sont payés à la fin du mois.",
-        "FbAngel ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager."
+        "FB4cash ne paiera pas pour un profil Facebook où il n'a pas été possible de configurer correctement le Business Manager."
       ]
     },
     "payment_method": {
       "title": "Mode de paiement",
       "p": [
-        "FbAngel enverra les paiements par Paypal et virement bancaire.",
+        "FB4cash enverra les paiements par Paypal et virement bancaire.",
         "Pour être payé par banque, il est nécessaire d'envoyer une copie d'un document pour se conformer aux exigences de notre banque."
       ]
     },
@@ -911,19 +911,19 @@
       "title": "Résiliation de la location du compte",
       "p": [
         "La période de location prendra fin le jour où le Business Manager n'est plus utilisé.",
-        "FbAngel, à sa seule discrétion, peut décider qu'il n'a plus besoin du compte et peut interrompre la période de location.",
+        "FB4cash, à sa seule discrétion, peut décider qu'il n'a plus besoin du compte et peut interrompre la période de location.",
         "La Location sera également annulée si le Business Manager est désactivé par le Propriétaire ou Facebook.",
-        "Si le compte a été utilisé pendant 15 jours ou plus ce mois-là, FbAngel effectuera le paiement du paiement mensuel.",
+        "Si le compte a été utilisé pendant 15 jours ou plus ce mois-là, FB4cash effectuera le paiement du paiement mensuel.",
         "La période de location prendra également fin en cas de violation substantielle des présentes Conditions."
       ]
     },
     "material_violation": {
       "title": "Vie matérielle",
       "p": [
-        "En cas de violation substantielle, FbAngel ne sera pas responsable du paiement de paiements futurs.",
-        "Connectez-vous au compte à partir de tout appareil qui n'a pas été utilisé avant le début de la période de location. Mettez en pause, arrêtez, modifiez ou interférez de quelque manière que ce soit avec les publicités FbAngel.",
-        "Supprimer ou supprimer FbAngel Business Manager ou Administrator de la page Facebook.",
-        "Supprimez ou supprimez le gestionnaire de compte FbAngel du rôle de gestionnaire de compte publicitaire. Utilisation du mode de paiement FbAngel à des fins autres que le paiement des annonces créées par FbAngel. Autorisez toute autre personne ou entreprise à accéder ou à utiliser le compte publicitaire. ",
+        "En cas de violation substantielle, FB4cash ne sera pas responsable du paiement de paiements futurs.",
+        "Connectez-vous au compte à partir de tout appareil qui n'a pas été utilisé avant le début de la période de location. Mettez en pause, arrêtez, modifiez ou interférez de quelque manière que ce soit avec les publicités FB4cash.",
+        "Supprimer ou supprimer FB4cash Business Manager ou Administrator de la page Facebook.",
+        "Supprimez ou supprimez le gestionnaire de compte FB4cash du rôle de gestionnaire de compte publicitaire. Utilisation du mode de paiement FB4cash à des fins autres que le paiement des annonces créées par FB4cash. Autorisez toute autre personne ou entreprise à accéder ou à utiliser le compte publicitaire. ",
         "Connectez-vous à Facebook avec un ordinateur de bureau ou un ordinateur portable à partir d'un nouvel emplacement auquel vous ne vous étiez pas connecté avant la période de location.",
         "Connectez-vous à Business Manager pour quelque raison que ce soit."
       ]
